docs/7.57/md/abendata_object_glosry.md
---
title: "data_object_glosry"
description: |
  data_object_glosry - ABAP 7.57 language reference documentation
version: "7.57"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_object_glosry.htm"
abapFile: "abendata_object_glosry.htm"
keywords: ["do", "if", "try", "data", "abendata", "object", "glosry"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP Glossary](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_glossary.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: data object, ABENDATA_OBJECT_GLOSRY, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASug
gestion for improvement:)

data object

[Instance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninstance_glosry.htm "Glossary Entry") of a [data type](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_type_glosry.htm "Glossary Entry"). Exists in the [internal session](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninternal_session_glosry.htm "Glossary Entry") of an [ABAP program](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_program_glosry.htm "Glossary Entry") or as a [shared object](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshared_object_glosry.htm "Glossary Entry") in the [shared memory](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshared_memory_glosry.htm "Glossary Entry"). Is either created as a [named](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennamed_data_object_glosry.htm "Glossary Entry"), statically declared data object (statement [DATA](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapdata.htm) and similar) when a program or [procedure](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenprocedure_glosry.htm "Glossary Entry") is loaded, or dynamically as an [anonymous data object](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenanonymous_data_object_glosry.htm "Glossary Entry") at runtime ( statement [CREATE DATA](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcreate_data.htm) or [instance operator](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninstance_operator_glosry.htm "Glossary Entry") [NEW](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconstructor_expression_new.htm)). In addition, the [literals](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_literal_glosry.htm "Glossary Entry") defined as part of the source code are also handled as data objects. The data type of a data object is always complete (not [generic](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abengeneric_data_type_glosry.htm "Glossary Entry")) and can be [bound](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbound_data_type_glosry.htm "Glossary Entry") or [standalone](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstand-alone_data_type_glosry.htm "Glossary Entry"). See also [static data object](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstatic_data_object_glosry.htm "Glossary Entry") and [dynamic data object](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynamic_data_object_glosry.htm "Glossary Entry").

[→ More about](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_objects.htm)